# hoho

./: .gitignore  Makefile.am  configure.ac
src/: hoho.cc  hoho.h  readfile.h  sequencer.cc  synth.cc  synth.h
